--- a/EnglishDongfang/list.html
+++ b/EnglishDongfang/list.html
@@ -19,7 +19,7 @@
 		    </ul>
 		  </div>
 		</div>
-		<script src="js/mui.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/mui.min.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			mui.init({
 				pullRefresh: {
