--- a/EnglishDongfang/index.html
+++ b/EnglishDongfang/index.html
@@ -6,13 +6,13 @@
     <title></title>
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link href="css/mui.css" rel="stylesheet"/>
+    <link href="css/mui.min.css" rel="stylesheet"/>
 </head>
 <body>
 	<header class="mui-bar mui-bar-nav">
 		<h1 id="title" class="mui-title">自学英语</h1>
 	</header>	
-	<script src="js/mui.js"></script>
+	<script src="js/mui.min.js"></script>
 	<script type="text/javascript" charset="UTF-8">
 		mui.init({
 			subpages:[{
@@ -75,6 +75,7 @@
 		mui.plusReady(function(){
 			//读取本地存储，检查是否为首次启动
 			var showGuide = plus.storage.getItem("lauchFlag");
+			var showGuide = true;
 
 			plus.screen.lockOrientation("portrait-primary");
 			if (showGuide) {
