--- a/EnglishDongfang/pullrefresh_group_element.html
+++ b/EnglishDongfang/pullrefresh_group_element.html
@@ -24,10 +24,10 @@
 		</body>
 		<script src="js/mui.min.js"></script>
 		<script type="text/javascript">
-			
-			URL = 'http://120.77.9.71:8092/jsonapi';
+			URL = 'http://192.168.1.149:8092/jsonapi';			
+//			URL = 'http://120.77.9.71:8092/jsonapi';
 			var pageIndex = 0;
-			var PAGE_SIZE = 20;
+			var PAGE_SIZE = 32;
 			var group_id = 1;
 			function getrequest_data(){
 				console.log('group_id ' + group_id);
@@ -38,7 +38,7 @@
 				"api" : "ReqGroupElementList",
 				"params" : {
 					"groupId":Number(group_id),
-					"pageSize":20,
+					"pageSize":PAGE_SIZE,
 					"pageIndex":pageIndex,
 				}
 			});
@@ -69,7 +69,7 @@
 				pullRefresh:{
 					container:'#pullrefresh',
 					up: {
-						auto:true,
+						auto:false,
 						height:50,
 						contentrefresh: '正在加载...',
 						contentnomore:'没有更多数据了',
