--- a/EnglishDongfang/content_page.html
+++ b/EnglishDongfang/content_page.html
@@ -73,8 +73,8 @@
 		<script type="text/javascript">
 			mui.init();
 			oid = 0;
-			URL = 'http://192.168.1.149:8092/jsonapi';
-//			URL = 'http://120.77.9.71:8092/jsonapi';			
+//			URL = 'http://192.168.1.149:8092/jsonapi';
+			URL = 'http://120.77.9.71:8092/jsonapi';			
 			function getrequest_data(){
 				return JSON.stringify({
 				"header":{
@@ -106,6 +106,11 @@
 			var network = true;
 			if(mui.os.plus){
 				mui.plusReady(function(){
+					main = plus.webview.currentWebview();
+					main.setStyle({
+						zindex:2
+					})
+					
 					if (plus.networkinfo.getCurrentType() == plus.networkinfo.CONNECTION_NONE) {
 						network = false;
 					}
